--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,9 @@
-html{
+@font-face {
+	font-family: 'Fira Sans';
+	src: url('../../resources/font/FiraSans-Regular.ttf') format('truetype');
+}
+
+html {
   background-color: #272b35;
 }
 
@@ -26,7 +31,7 @@ body {
 
 .square {
   padding: 0.4em;
-  font-family: Ubuntu Mono;
+  font-family: Fira Sans;
   font-size: 1rem;
   width: 100%;
   height: 20em;
