--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,7 +4,7 @@
 }
 
 html {
-  background-color: #272b35;
+  background-color: #2E3440;
 }
 
 body {
@@ -42,7 +42,7 @@ body {
 .square-header {
   font-size: 1.1rem;
   font-weight: 600;
-  color: #fff;
+  color: #E5E9F0;
   margin: 0em 0em .35em 0em;
 }
 
@@ -53,7 +53,7 @@ body {
 
 a {
   text-decoration: none;
-  color: #8c8c8b;
+  color: #E5E9F0;
   display: block;
   margin: .5em 0em;
 }
